--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
-  "type":"module",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node src/app.js",
@@ -18,8 +18,5 @@
   "bugs": {
     "url": "https://github.com/avimalhotra/nodesep25/issues"
   },
-  "homepage": "https://github.com/avimalhotra/nodesep25#readme",
-  "dependencies": {
-    "colors": "^1.4.0"
-  }
+  "homepage": "https://github.com/avimalhotra/nodesep25#readme"
 }
