--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node --env-file=.env src/app.js",
-    "dev": "node --env-file=.env --watch src/app.js"
+    "dev": "nodemon --env-file=.env src/app.js"
   },
   "repository": {
     "type": "git",
@@ -18,5 +18,12 @@
   "bugs": {
     "url": "https://github.com/avimalhotra/nodesep25/issues"
   },
-  "homepage": "https://github.com/avimalhotra/nodesep25#readme"
+  "homepage": "https://github.com/avimalhotra/nodesep25#readme",
+  "dependencies": {
+    "bootstrap": "^5.3.8",
+    "express": "^5.1.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.10"
+  }
 }
