--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
   "dependencies": {
     "bootstrap": "^5.3.8",
     "cookie-parser": "^1.4.7",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "express-session": "^1.18.2",
+    "parseurl": "^1.3.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
