--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "express": "^5.1.0",
     "express-session": "^1.18.2",
     "multer": "^2.0.2",
-    "parseurl": "^1.3.3"
+    "nodemailer": "^7.0.10",
+    "parseurl": "^1.3.3",
+    "socket.io": "^4.8.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
